--- a/ansible/roles/install-configure-portainer/tasks/deploy-portainer.yml
+++ b/ansible/roles/install-configure-portainer/tasks/deploy-portainer.yml
@@ -22,12 +22,19 @@
     image: "{{ portainer_version }}"
     state: started
     restart_policy: always
-    ports:
-      - "9000:9000"
     labels:
       com.centurylinklabs.watchtower.enable: "false"
+      traefik.enable: "true"
+      traefik.http.routers.portainer.entrypoints: "web, websecure"
+      traefik.http.routers.portainer.rule: "Host(`portainer.{{ inventory_hostname }}`)"
+      traefik.http.routers.portainer.tls: "true"
+      traefik.http.routers.portainer.tls.certresolver: "production"
+      traefik.http.services.portainer.loadbalancer.server.port: "9000"
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock"
       - "portainer_data:/data"
       - "/etc/portainercfg/portainer_password:/tmp/portainer_password"
+    networks:
+      - name: traefik_network
     command: ["--admin-password-file", "/tmp/portainer_password"]
+  tags: deploy
