--- a/ansible/roles/install-configure-portainer/tasks/deploy-traefik.yml
+++ b/ansible/roles/install-configure-portainer/tasks/deploy-traefik.yml
@@ -11,17 +11,25 @@
 - name: Run Traefik Container
   docker_container:
     name: traefik
-    image: traefik:v2.5
+    image: "{{ traefik_image }}"
     state: started
     ports:
       - "80:80"
       - "443:443"
-      - "8080:8080"
     labels:
       com.centurylinklabs.watchtower.enable: "false"
+      traefik.enable: "true"
+      traefik.http.routers.dashboard.entrypoints: "web, websecure"
+      traefik.http.routers.dashboard.tls: "true"
+      traefik.http.routers.dashboard.tls.certresolver: "production"
+      traefik.http.routers.dashboard.rule: "Host(`traefik.{{ inventory_hostname }}`)"
+      traefik.http.routers.dashboard.service: "api@internal"
+      traefik.http.routers.dashboard.middlewares: "auth"
+      traefik.http.middlewares.auth.basicauth.users: "{{ traefik_username }}:{{ traefik_password | b64encode }}"
     volumes:
       - "/etc/traefik:/etc/traefik"
       - "traefik-ssl-certs:/ssl-certs"
       - "/var/run/docker.sock:/var/run/docker.sock:ro"
     networks:
       - name: traefik_network
+  tags: deploy_traefik
