--- a/ansible/roles/install-configure-portainer/tasks/install-docker.yml
+++ b/ansible/roles/install-configure-portainer/tasks/install-docker.yml
@@ -7,14 +7,15 @@
   ansible.builtin.command: yum-config-manager --add-repo https://download.docker.com/linux/centos/docker-ce.repo
 
 - name: Install docker
-  ansible.builtin.yum:
-    name: "{{ packages }}"
-    state: present
-  vars:
-    packages:
-      - docker-ce
-      - docker-ce-cli
-      - containerd.io
+  ansible.builtin.shell: yum install docker-ce docker-ce-cli containerd.io --allowerasing -y
+  # ansible.builtin.yum:
+  #   name: "{{ packages }}"
+  #   state: present
+  # vars:
+  #   packages:
+  #     - docker-ce
+  #     - docker-ce-cli
+  #     - containerd.io
 
 - name: Start docker
   ansible.builtin.systemd:
